--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My First Github Repo</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Buker Vitor ache pran</h1>
   <small>full song</small>
+  <p>bangla new song 2021</p>
 </body>
 </html>
